# opencode-sessions

./: .gitignore  .pypirc-template  PUBLISH.md  PYPI_TOKEN_INSTRUCTIONS.md  README-opencode-sessions.md  README.md  install.sh  ocs-plugin.js  ocs.fish  opencode-sessions  opencode-sessions-plugin.js  opencode-sessions.fish  package.json  pyproject.toml
src/ocs/: __init__.py  main.py
