[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocs"
version = "1.0.0"
description = "Enhanced OpenCode session manager with detailed statistics"
readme = "README.md"
authors = [
    {name = "kis-sik", email = "your-email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control",
    "Topic :: Utilities",
]
requires-python = ">=3.7"
dependencies = []

[project.scripts]
ocs = "ocs.main:main"

[tool.uv]
# uv-specific configuration
lockfile = "uv.lock"

[tool.uvx]
# Configuration for uvx
# Users can run: uvx ocs --help

[project.urls]
Homepage = "https://github.com/kis-sik/opencode-sessions"
Repository = "https://github.com/kis-sik/opencode-sessions.git"

[tool.setuptools]
package-dir = {"" = "src"}